# trip-recommedation-system

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/routes/: recommendation.py
app/services/: recommender.py
app/templates/: index.html  recommendation.html
data/processed/: final_df.csv
models/: label_encoders.pkl  model.pkl
notebooks/: travel_recommender.ipynb
